--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aitoraznar.com/"
+baseURL = "https://inspiring-brown-0a1d4c.netlify.com/"
 languageCode = "es-es"
 title = "Aitor Aznar"
 theme = "m10c"
