--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/hugo-theme-m10c"]
-	path = themes/hugo-theme-m10c
-	url = https://github.com/vaga/hugo-theme-m10c.git
-[submodule "themes/m10c"]
-	path = themes/m10c
-	url = https://github.com/vaga/hugo-theme-m10c.git
+[submodule "themes/uilite"]
+	path = themes/uilite
+	url = https://github.com/uicardiodev/hugo-uilite/
