--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,7 @@
 baseURL = "https://inspiring-brown-0a1d4c.netlify.com/"
 languageCode = "es-es"
 title = "Aitor Aznar"
-theme = "m10c"
-[params]
-  author = "Aitor Aznar"
-  description = "Soy un desarrollador de software de Bilbao, encajo en el perfil de Fullstack developer con tecnologías como Javascript, Nodejs, Java, Apps híbridas, etc."
-  [[params.social]]
-    name = "github"
-    url = "https://github.com/aitoraznar"
-  [[params.social]]
-    name = "twitter"
-    url = "https://twitter.com/aitoraznara"
+theme = "uilite"
+googleAnalytics = "UA-44570722-1"
+[permalinks]
+  posts = "/blog"
